<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".RegisterActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmailAdress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:textColorHint="#FFFFFF"
        app:hintTextAppearance="@style/TextInputLayoutTextColor"
        app:startIconDrawable="@drawable/emailicon"
        app:layout_constraintEnd_toStartOf="@id/guidelineright"
        app:layout_constraintStart_toEndOf="@id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/EMail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailAdress"
            android:textColor="@color/white"
            android:backgroundTint="#7DBADD"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        app:endIconMode="password_toggle"
        android:textColorHint="#FFFFFF"
        app:hintTextAppearance="@style/TextInputLayoutTextColor"
        app:startIconDrawable="@drawable/passwordicon"
        app:layout_constraintEnd_toStartOf="@id/guidelineright"
        app:layout_constraintStart_toEndOf="@id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/Password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:textColor="@color/white"
            android:backgroundTint="#7DBADD"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>




    <TextView
        android:id="@+id/textviewTerms_of_Use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="436dp"
        android:layout_marginRight="50dp"
        android:text="@string/Terms_of_Use"
        android:textStyle="bold"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toStartOf="@id/guidelineright"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textviewAGB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="460dp"
        android:text="@string/AGB"
        android:textStyle="bold"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toStartOf="@id/guidelineright"
        app:layout_constraintStart_toEndOf="@id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="544dp"
        android:text="@string/RegisterButton"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:backgroundTint="#7DBADD"
        app:layout_constraintEnd_toStartOf="@id/guidelineright"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textviewExistingAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/ExistingAccount"
        android:textStyle="bold"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
