<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    tools:context=".SettingsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />



    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/appSettings"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/guidelineright"
        app:layout_constraintStart_toEndOf="@id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/guidelineright"
            app:layout_constraintStart_toEndOf="@id/guidelineleft"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/streamingMobile"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/mobileStreaming"
                android:layout_width="60dp"
                android:checked="true"
                android:layout_height="48dp"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/guidelineright"
        app:layout_constraintStart_toEndOf="@id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/downloadingMobile"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/mobileDownload"
            android:layout_width="60dp"
            android:layout_height="48dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/guidelineright"
        app:layout_constraintStart_toEndOf="@id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/enableNotification"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/enableNotification"
            android:layout_width="60dp"
            android:checked="true"
            android:layout_height="48dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/guidelineright"
        app:layout_constraintStart_toEndOf="@id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/soundQuality"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/soundqualitySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/guidelineright"
        app:layout_constraintStart_toEndOf="@id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/enableNotification"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/logout"
            android:layout_width="60dp"
            android:checked="true"
            android:layout_height="48dp"/>
    </LinearLayout>


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:text="@string/legal_requirements"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/guidelineright"
        app:layout_constraintStart_toEndOf="@id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/guidelineright"
        app:layout_constraintStart_toEndOf="@id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textviewWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/impress"
            android:textColor="#ffffff"
            android:textSize="16sp">
        </TextView>
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButtonBackbutton"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/backbuttonicon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </ImageButton>


    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:backgroundTint="#7DBADD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />





</androidx.constraintlayout.widget.ConstraintLayout>