<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D2C3B"
    tools:context=".LoginActivity">


    <ImageButton
        android:id="@+id/imageButtonBackbutton"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/backbuttonicon"
        app:layout_constraintStart_toEndOf="@id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent">

    </ImageButton>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmailAdress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:textColorHint="#FFFFFF"
        app:hintTextAppearance="@style/TextInputLayoutTextColor"
        app:startIconDrawable="@drawable/emailicon"
        app:layout_constraintEnd_toStartOf="@id/guidelineright"
        app:layout_constraintStart_toEndOf="@id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/EMail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailAdress"
            android:textColor="@color/white"
            android:backgroundTint="#7DBADD"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        app:endIconMode="password_toggle"
        android:textColorHint="#FFFFFF"
        app:hintTextAppearance="@style/TextInputLayoutTextColor"
        app:startIconDrawable="@drawable/passwordicon"
        app:layout_constraintEnd_toStartOf="@id/guidelineright"
        app:layout_constraintStart_toEndOf="@id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/Password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:textColor="@color/white"
            android:backgroundTint="#7DBADD"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:text="@string/loginButton"
        android:textAllCaps="false"
        android:backgroundTint="#7DBADD"
        app:layout_constraintEnd_toStartOf="@id/guidelineright"
        app:layout_constraintStart_toEndOf="@id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="575dp"
        android:gravity="center_vertical"
        android:text="@string/ForgotPassword"
        android:textStyle="bold"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toStartOf="@id/guidelineright"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
